# Fast-SCNN-pytorch-master

./: .gitignore
Lane_Detection/: .gitignore  README.md  lane_detection_version.py  utils.py
Realtime-Lane-Segmentation/: README.md  TENSORRT_SETUP.md  coco.names  demo.py  requirements.txt  test_models.py  test_tensorrt.py
Realtime-Lane-Segmentation/models/: __init__.py  bisenet_v2.py  fast_scnn.py  tensorrt_utils.py
semantic_navigator_ros/: CMakeLists.txt  package.xml
semantic_navigator_ros/launch/: navigate.launch  navigate.rviz
semantic_navigator_ros/scripts/: navigator_node.py
semantic_navigator_ros/utils/: visualize.py
