<?xml version="1.0"?>
<package format="2">
  <name>semantic_navigator_ros</name>
  <version>0.0.1</version>
  <description>A ROS package for semantic navigation using Fast-SCNN.</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>

</package> 